crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__exactness__proximity_after_exactness.snap
---
source: milli/src/search/new/tests/exactness.rs
expression: "format!(\"{document_ids_scores:#?}\")"
---
[
    (
        2,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                ExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            Proximity(
                Rank {
                    rank: 25,
                    max_rank: 25,
                },
            ),
        ],
    ),
    (
        1,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            Proximity(
                Rank {
                    rank: 24,
                    max_rank: 25,
                },
            ),
        ],
    ),
    (
        0,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            Proximity(
                Rank {
                    rank: 9,
                    max_rank: 25,
                },
            ),
        ],
    ),
    (
        4,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                MatchesStart,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 4,
                    max_matching_words: 4,
                },
            ),
            Proximity(
                Rank {
                    rank: 10,
                    max_rank: 10,
                },
            ),
        ],
    ),
    (
        5,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                MatchesStart,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 4,
                    max_matching_words: 4,
                },
            ),
            Proximity(
                Rank {
                    rank: 10,
                    max_rank: 10,
                },
            ),
        ],
    ),
    (
        8,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                MatchesStart,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 4,
                    max_matching_words: 4,
                },
            ),
            Proximity(
                Rank {
                    rank: 10,
                    max_rank: 10,
                },
            ),
        ],
    ),
    (
        7,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 4,
                    max_matching_words: 4,
                },
            ),
            Proximity(
                Rank {
                    rank: 9,
                    max_rank: 10,
                },
            ),
        ],
    ),
    (
        3,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 4,
                    max_matching_words: 4,
                },
            ),
            Proximity(
                Rank {
                    rank: 5,
                    max_rank: 10,
                },
            ),
        ],
    ),
    (
        6,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 4,
                    max_matching_words: 4,
                },
            ),
            Proximity(
                Rank {
                    rank: 5,
                    max_rank: 10,
                },
            ),
        ],
    ),
]
